remove phone on model
